# mary-elizabeth-utils

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  data_config.py  generate_data.py  justfile  pyproject.toml  requirements-dev.txt  test_config.yaml  test_pipeline.py
.github/workflows/: CI.yml  pypi_publish.yml  release_drafter.yml  testing.yml
data/: output.csv
mary_elizabeth_utils/: __init__.py  config.py  data_analysis.py  data_processor.py  data_transformation.py  datacheck.py  dataprep.py  descriptive.py  main.py
python/mary_elizabeth_utils/: __init__.py  _mary_elizabet_utils.pyi  bypass_script.py  caching.py  colored_logger.py  config.py  config.yaml  data_loading.py  data_processor.py  data_validation.py  main.py  mwx.py  profile_data.py  readstat_wrapper.py  run.py
src/: download_readstat.rs  lib.rs
synth_data/: icd10.csv
synth_data/akm/: akm_2000.parquet  akm_2001.parquet  akm_2002.parquet  akm_2003.parquet  akm_2004.parquet  akm_2005.parquet  akm_2006.parquet  akm_2007.parquet  akm_2008.parquet  akm_2009.parquet  akm_2010.parquet  akm_2011.parquet  akm_2012.parquet  akm_2013.parquet  akm_2014.parquet  akm_2015.parquet  akm_2016.parquet  akm_2017.parquet  akm_2018.parquet  akm_2019.parquet  akm_2020.parquet  akm_2021.parquet  akm_2022.parquet
synth_data/bef/: bef_2000.parquet  bef_2001.parquet  bef_2002.parquet  bef_2003.parquet  bef_2004.parquet  bef_2005.parquet  bef_2006.parquet  bef_2007.parquet  bef_2008.parquet  bef_2009.parquet  bef_2010.parquet  bef_2011.parquet  bef_2012.parquet  bef_2013.parquet  bef_2014.parquet  bef_2015.parquet  bef_2016.parquet  bef_2017.parquet  bef_2018.parquet  bef_2019.parquet  bef_2020.parquet  bef_2021.parquet  bef_2022.parquet  bef_2023.parquet
synth_data/dod/: dod_2000.parquet  dod_2001.parquet  dod_2002.parquet  dod_2003.parquet  dod_2004.parquet  dod_2005.parquet  dod_2006.parquet  dod_2007.parquet  dod_2008.parquet  dod_2009.parquet  dod_2010.parquet  dod_2011.parquet  dod_2012.parquet  dod_2013.parquet  dod_2014.parquet  dod_2015.parquet  dod_2016.parquet  dod_2017.parquet  dod_2018.parquet  dod_2019.parquet  dod_2020.parquet  dod_2021.parquet  dod_2022.parquet
synth_data/dodsaars/: dodsaars_2000.parquet  dodsaars_2001.parquet
synth_data/dodsaasg/: dodsaasg_2000.parquet  dodsaasg_2001.parquet  dodsaasg_2002.parquet  dodsaasg_2003.parquet  dodsaasg_2004.parquet  dodsaasg_2005.parquet  dodsaasg_2006.parquet  dodsaasg_2007.parquet  dodsaasg_2008.parquet  dodsaasg_2009.parquet  dodsaasg_2010.parquet  dodsaasg_2011.parquet  dodsaasg_2012.parquet  dodsaasg_2013.parquet  dodsaasg_2014.parquet  dodsaasg_2015.parquet  dodsaasg_2016.parquet  dodsaasg_2017.parquet  dodsaasg_2018.parquet  dodsaasg_2019.parquet  dodsaasg_2020.parquet  dodsaasg_2021.parquet
synth_data/faik/: faik_2000.parquet  faik_2001.parquet  faik_2002.parquet  faik_2003.parquet  faik_2004.parquet  faik_2005.parquet  faik_2006.parquet  faik_2007.parquet  faik_2008.parquet  faik_2009.parquet  faik_2010.parquet  faik_2011.parquet  faik_2012.parquet  faik_2013.parquet  faik_2014.parquet  faik_2015.parquet  faik_2016.parquet  faik_2017.parquet  faik_2018.parquet  faik_2019.parquet  faik_2020.parquet  faik_2021.parquet
synth_data/idan/: idan_2000.parquet  idan_2001.parquet  idan_2002.parquet  idan_2003.parquet  idan_2004.parquet  idan_2005.parquet  idan_2006.parquet  idan_2007.parquet  idan_2008.parquet  idan_2009.parquet  idan_2010.parquet  idan_2011.parquet  idan_2012.parquet  idan_2013.parquet  idan_2014.parquet  idan_2015.parquet  idan_2016.parquet  idan_2017.parquet  idan_2018.parquet  idan_2019.parquet  idan_2020.parquet  idan_2021.parquet
synth_data/ilme/: ilme_2009.parquet  ilme_2010.parquet  ilme_2011.parquet  ilme_2012.parquet  ilme_2013.parquet  ilme_2014.parquet  ilme_2015.parquet  ilme_2016.parquet  ilme_2017.parquet  ilme_2018.parquet  ilme_2019.parquet  ilme_2020.parquet  ilme_2021.parquet  ilme_2022.parquet
synth_data/ind/: ind_2001.parquet  ind_2002.parquet  ind_2003.parquet  ind_2004.parquet  ind_2005.parquet  ind_2006.parquet  ind_2007.parquet  ind_2008.parquet  ind_2009.parquet  ind_2010.parquet  ind_2011.parquet  ind_2012.parquet  ind_2013.parquet  ind_2014.parquet  ind_2015.parquet  ind_2016.parquet  ind_2017.parquet  ind_2018.parquet  ind_2019.parquet  ind_2020.parquet  ind_2021.parquet  ind_2022.parquet
synth_data/lmdb/: lmdb_2000.parquet  lmdb_2001.parquet  lmdb_2002.parquet  lmdb_2003.parquet  lmdb_2004.parquet  lmdb_2005.parquet  lmdb_2006.parquet  lmdb_2007.parquet  lmdb_2008.parquet  lmdb_2009.parquet  lmdb_2010.parquet  lmdb_2011.parquet  lmdb_2012.parquet  lmdb_2013.parquet  lmdb_2014.parquet  lmdb_2015.parquet  lmdb_2016.parquet  lmdb_2017.parquet  lmdb_2018.parquet  lmdb_2019.parquet  lmdb_2020.parquet  lmdb_2021.parquet  lmdb_2022.parquet  lmdb_2023.parquet
synth_data/lpr_adm/: lpr_adm_2000.parquet  lpr_adm_2001.parquet  lpr_adm_2002.parquet  lpr_adm_2003.parquet  lpr_adm_2004.parquet  lpr_adm_2005.parquet  lpr_adm_2006.parquet  lpr_adm_2007.parquet  lpr_adm_2008.parquet  lpr_adm_2009.parquet  lpr_adm_2010.parquet  lpr_adm_2011.parquet  lpr_adm_2012.parquet  lpr_adm_2013.parquet  lpr_adm_2014.parquet  lpr_adm_2015.parquet  (+4 more)
tests/: test_datacheck.py  test_mary_elizabeth_utils.py  test_version.py
(+114 files in other folders)
