[package]
name = "mary-elizabeth-utils"
version = "0.1.2"
description = "My utilities for the different projects"
edition = "2021"
license = "MIT"
readme = "README.md"
build = "build.rs"

[lib]
name = "_mary_elizabeth_utils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
dirs = "5.0"


[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
anyhow = "1.0"
dirs = "5.0"

[package.metadata.maturin]
python-source = "python"
include = ["rust-bin/readstat_binary/*"]
